js rendering of divs

--- a/index.html
+++ b/index.html
@@ -12,37 +12,23 @@
         <img class="rocket-img" src="img/rocket.png" alt="rocket" />
       </div>
       <div class="brand">
-        <h1 class="brand-name">Solutions Simplified</h1>
+        <h1 class="brand-name">Countdown App</h1>
       </div>
       <div class="content">
-        <h1 class="launch-message">Coming soon!</h1>
+        <h1 class="launch-message">New features coming soon</h1>
         <div class="countdown">
-          <div>
-            <h2 id="days">00</h2>
-            <p>Days</p>
-          </div>
-          <div>
-            <h2 id="hours">00</h2>
-            <p>Hours</p>
-          </div>
-          <div>
-            <h2 id="minutes">00</h2>
-            <p>Minutes</p>
-          </div>
-          <div>
-            <h2 id="seconds">00</h2>
-            <p>Seconds</p>
-          </div>
+          <!-- Child divs created dynamically through js -->
         </div>
         <a
           class="learn-more-button"
-          href="https://www.geeksforgeeks.org/how-to-create-a-transparent-button-using-html-and-css/"
+          href="https://www.linkedin.com/in/noah-rubin1/"
           target="_blank"
         >
           Learn More
         </a>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script type="module" src="./js/utils.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
